<resources>
    <string name="app_name">Cryptogram</string>
    <string name="intro1_title">How to play</string>
    <string name="intro1_text">Decipher the encrypted text to reveal the motivational quote!</string>
    <string name="intro2_title">How it works</string>
    <string name="intro2_text">Check the help pages for instructions and tips.</string>
    <string name="intro_next">Go on…</string>
    <string name="intro_done">Got it!</string>
    <string name="highlight_touch_input_title">Tap to input</string>
    <string name="highlight_touch_input_description">You can simply tap the puzzle to select a hint.</string>
    <string name="highlight_hyphenation_title">Hyphenation</string>
    <string name="highlight_hyphenation_description">Watch out for the hyphen! The word continues on the next line.</string>
    <string name="highlight_used_letters_title">Used characters</string>
    <string name="highlight_used_letters_description">Used characters are now shown by default. You can change this setting and many others here.</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="next">Next</string>
    <string name="reveal">Reveal</string>
    <string name="reveal_select">Reveal…</string>
    <string name="reveal_letter">…letter</string>
    <string name="reveal_mistakes">…mistakes</string>
    <string name="reveal_puzzle">…puzzle</string>
    <string name="reset">Reset</string>
    <string name="go_to_puzzle">Go to puzzle…</string>
    <string name="share">Share puzzle…</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="help">Help…</string>
    <string name="donate_heart">Donate ❤</string>
    <string name="donate">Donate</string>
    <string name="how_to_play">How do I play?</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="skip_puzzle">Are you sure you’d like to skip this puzzle?</string>
    <string name="reveal_letter_confirmation">Are you sure you’d like to reveal the selected letter? This affects your score.</string>
    <string name="reveal_mistakes_confirmation">Are you sure you’d like to highlight all mistakes in the puzzle? This affects your score.</string>
    <string name="reset_puzzle">Are you sure you’d like to reset this puzzle?</string>
    <string name="never_ask_again">Never ask again</string>
    <string name="reset_dialogs">Reset all suppressed dialogs</string>
    <string name="reset_all_puzzles">Reset all puzzles</string>
    <string name="reset_all_puzzles_confirmation">Are you sure you’d like to reset all puzzles? There’s no going back! Type “%1$s” to permanently reset all puzzles.</string>
    <string name="reset_all_puzzles_keyword">do it</string>
    <string name="reset_all_puzzles_executed">All puzzles have been reset</string>
    <string name="reset_all_puzzles_cancelled">You didn’t say the magic word!</string>
    <string name="error_no_puzzles">Whoops! Looks like we couldn’t load the puzzle.</string>
    <string name="error_no_activity">Whoops! Looks like there aren’t any apps installed to do that.</string>
    <string name="reveal_letter_instruction">Please select a letter first.</string>
    <string name="reveal_mistakes_none">No mistakes! Keep it up!</string>
    <string name="puzzle_number_instruction">Instructional puzzle</string>
    <string name="puzzle_number_practice">Puzzle #%1$d (practice)</string>
    <string name="puzzle_number">Puzzle #%1$d</string>
    <string name="puzzle_nonexistant">Puzzle #%1$d doesn’t exist</string>
    <string name="puzzle_completed">Puzzle completed</string>
    <string name="share_full">“%1$s”\n— %2$s\n\nDecipher cryptograms to reveal quotes like these! %3$s</string>
    <string name="share_partial">I’m working on a quote by %1$s!\n\nDecipher cryptograms to reveal quotes like these! %2$s</string>
    <string name="share_url">https://play.google.com/store/apps/details?id=com.pixplicity.cryptogram</string>
    <string name="quote">— %1$s&#x200A;</string>
    <string name="topic">Topic: “%1$s”</string>
    <string name="not_applicable">N/A</string>
    <string name="author_unknown">anonymous</string>
    <string name="stats_time">Time elapsed:</string>
    <string name="stats_reveals">Characters revealed:</string>
    <string name="stats_score">Score:</string>
    <string name="stats_practice">Practice puzzles don’t count towards your score or achievements.</string>
    <string name="stats_average_score_format" translatable="false">%1$.1f%%</string>
    <string name="stats_cumulative_score_format" translatable="false">%1$.0f</string>
    <string name="stats_total_completed_label">Completed puzzles:</string>
    <string name="stats_total_completed_value">%1$d of %2$d</string>
    <string name="stats_average_score_label">Average score:</string>
    <string name="stats_average_score_value">%1$s</string>
    <string name="stats_cumulative_score_label">Cumulative score:</string>
    <string name="stats_cumulative_score_value">%1$s</string>
    <string name="stats_fastest_completion_label">Fastest completion:</string>
    <string name="stats_fastest_completion_value">%1$s</string>
    <string name="stats_total_time_spent_label">Total time played:</string>
    <string name="stats_total_time_spent_value">%1$s</string>
    <string name="stats_longest_streak_label">Longest streak:</string>
    <string name="stats_longest_streak_value">%1$d %2$s</string>
    <plurals name="days">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <string name="go_to_puzzle_content">Please enter the puzzle number to go to:</string>
    <string name="google_play_games_welcome">Sign in to Google Play Games to save your progress and compare leaderboards and achievements</string>
    <string name="google_play_games_sign_in">Sign in…</string>
    <string name="google_play_games_leaderboards">Leaderboard</string>
    <string name="google_play_games_achievements">Achievements</string>
    <string name="google_play_games_saved_games">Saved games</string>
    <string name="google_play_games_sign_out">Sign out</string>
    <string name="google_play_games_player_unknown">Anonymous</string>
    <string name="google_play_games_connection_failure">Uh, oh! Looks like we can’t reach Google Play Games at the moment.\n\nPlease try again later or report this problem (connection failure with code %1$d-%2$d) through the about screen.</string>
    <string name="google_play_games_not_installed">Google Play Games doesn’t appear to be installed</string>
    <string name="saved_game_name">Game state on %1$s</string>
    <string name="saved_game_loading">Loading saved game…</string>
    <string name="scoring_changed_title">Scoring has changed a bit</string>
    <string name="scoring_changed_message">You are no longer punished for excess inputs, so try as many letters as you like!</string>
    <string name="scoring_changed_ok">OK</string>
    <string name="settings_theme">Theme</string>
    <string name="text_size">Text size:</string>
    <string name="text_size_small">Small text</string>
    <string name="text_size_normal">Normal text</string>
    <string name="show_hints">Show used letters</string>
    <string name="randomize_puzzles">Randomize puzzles</string>
    <string name="donate_title">❤</string>
    <string name="donate_message">Cryptogram is a free &amp; ad-free app I tinker on in my spare time. I love working on it and hearing feedback from users who love it!\n\nIf you’ve enjoyed playing, please consider a donation. I put all proceeds aside for a nice cup of coffee or a dinner with friends.\n\nDon’t hesitate to let me know that you’ve made a donation. I’d love to thank you!</string>
    <string name="donate_bitcoin">Donate bitcoin</string>
    <string name="donate_google_play">Donate through Google Play</string>
    <string name="made_with_love_by">MADE WITH LOVE BY</string>
    <string name="pixplicity">Pixplicity</string>
    <string name="about_this_app_1">
        <![CDATA[
            <p>
                <strong>
                    Decipher the encrypted text to reveal the motivational quote!
                </strong>
            </p>
            <p>
                A cryptogram is a type of puzzle that consists of a short piece of encrypted text.
                The cipher used to encrypt the text is a simple substitution of letters and is
                simple enough that the cryptogram can be solved by hand.
            </p>
            %1$s for Android works completely offline, so you can enjoy some brain teasers while
            traveling.
            ]]>
    </string>
    <string name="about_this_app_2">
        <![CDATA[
            Made by the Netherlands’ top Android developers at <strong>Pixplicity</strong>, this
            simple little game showcases our passion for apps and our attention to detail.
            <br /><br />
            Best of all, it’s completely free, and free of ads! Enjoy!
        ]]>
    </string>
    <string name="title_disclaimer">Legal</string>
    <string name="disclaimer"><![CDATA[
            <p>
                Anonymous crash and usage data may be sent to Crashlytics by Twitter. This is solely
                used to gather anonymous statistics about usage for automatic reporting of any
                issues. There is strictly no identifiable information
                transferred.
            </p>
            <p>
                <b>Copyright © 2017 Pixplicity</b>
            </p>
            <p>
                Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
            </p>
            <p>
                The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
            </p>
            <p>
                THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
            </p>
        ]]>
    </string>
    <string name="title_licenses">Licenses</string>
    <string name="licenses">
        <![CDATA[
            This app uses the following libraries, licensed under the Apache License 2.0:
            <br /><br />
            • <strong>EasyPrefs</strong> by Pixplicity<br />
            • <strong>HtmlCompat</strong> by Pixplicity<br />
            • <strong>Gene-rate</strong> by Pixplicity<br />
            • <strong>Butter Knife</strong> by Square Inc.<br />
            • <strong>Otto</strong> by Square Inc.<br />
            • <strong>Material Dialogs</strong> by Aidan Follestad<br />
            • <strong>Glide</strong> by Bump Technologies<br />
            • <strong>RatioLayout</strong> by Amphiaraus<br />
            • <strong>TapTargetView</strong> by Keepsafe<br />
            • <strong>Gson</strong> by Google
            ]]>
    </string>
    <string name="title_artwork">Artwork</string>
    <string name="artwork">
        <![CDATA[
            Leaderboard and achievement iconography graciously provided by <a href="https://twitter.com/madebyoliver">Oliver Stone</a>.
            ]]>
    </string>
    <string name="website">Visit Pixplicity.com</string>
</resources>