<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_next"
        android:orderInCategory="100"
        android:title="@string/next"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_reveal"
        android:icon="@drawable/ic_reveal"
        android:orderInCategory="200"
        android:title="@string/reveal_letter"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_reset"
        android:icon="@drawable/ic_reset"
        android:orderInCategory="205"
        android:title="@string/reset"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:orderInCategory="300"
        android:title="@string/about"
        app:showAsAction="never"/>

</menu>
