<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_icon"/>

        <TextView
            style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            tools:text="vX.Y.Z"/>

        <TextView
            android:id="@+id/tv_about_this_app_1"
            style="@style/InfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/about_this_app_1"
            android:textSize="15sp"/>

        <TextView
            style="@style/InfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/made_with_love_by"
            android:textSize="14sp"/>

        <ImageView
            android:id="@+id/iv_pixplicity"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:contentDescription="@string/pixplicity"
            android:scaleType="centerInside"
            android:src="@drawable/im_pixplicity_color"/>

        <TextView
            android:id="@+id/tv_about_this_app_2"
            style="@style/InfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_this_app_2"
            android:textSize="15sp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_website"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/website"
            android:textAllCaps="true"
            android:textColor="@color/link"
            tools:ignore="UnusedAttribute"/>

        <TextView
            style="@style/InfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_disclaimer"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_disclaimer"
            style="@style/InfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer"
            tools:targetApi="ice_cream_sandwich"/>

        <TextView
            style="@style/InfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_licenses"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_licenses"
            style="@style/InfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/licenses"/>

        <TextView
            style="@style/InfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/title_artwork"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/artwork"
            style="@style/InfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artwork"
            tools:targetApi="ice_cream_sandwich"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
