<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_open_side_nav"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="300"
        android:title="@string/settings_statistics"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help"
        android:orderInCategory="400"
        android:title="@string/help"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/action_how_to_play"
                android:orderInCategory="10"
                android:title="@string/how_to_play"/>

            <item
                android:id="@+id/action_about"
                android:orderInCategory="20"
                android:title="@string/about"/>

        </menu>

    </item>

</menu>
