<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*">

    <TableRow
        android:layout_height="match_parent"
        android:layout_weight="1">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_leaderboards"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_height="match_parent"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorPrimary"
            android:drawableTop="@drawable/games_leaderboards"
            android:padding="24dp"
            android:text="@string/google_play_games_leaderboards"
            tools:targetApi="m"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_achievements"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_height="match_parent"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorPrimary"
            android:drawableTop="@drawable/games_achievements"
            android:padding="24dp"
            android:text="@string/google_play_games_achievements"
            tools:targetApi="m"/>

    </TableRow>

    <TableRow
        android:layout_height="match_parent"
        android:layout_weight="1">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_sign_out"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/google_play_games_sign_out"/>

    </TableRow>

</TableLayout>
