<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_randomize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/randomize_puzzles"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_hints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/show_hints"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_dark_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dark_theme"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_reset_dialogs"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/reset_dialogs"
            android:textAllCaps="true"
            tools:ignore="UnusedAttribute"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
